fix text alignment

--- a/css/style.css
+++ b/css/style.css
@@ -27,11 +27,18 @@
     font-weight: bold;
     color: black;
     border: none;
+    margin: 1%;
     /*make it a circle*/
     border-radius: 50%;
-    /*set width to 25% so all discs equal in size (max 4 in a line)*/
-    width: 25%;
-    /*set height to 0, and set padding-bottom so height = width*/
+    /*set width to 20% so all discs equal in size (max 4 in a line)*/
+    width: 20%;
+    /*set height to 0, and set padding-bottom & top so combined = 20%  (height = width)*/
     height: 0;
-    padding-bottom: 25%;
+    padding-bottom: 10%;
+    padding-top: 10%;
+
+    /*make it a flex container so text aligns*/
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
